--- a/app/src/main/res/layout/fragment_detail_bayar.xml
+++ b/app/src/main/res/layout/fragment_detail_bayar.xml
@@ -6,59 +6,58 @@
     tools:context=".kasir.DetailBayarFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rl_layouttransaksi"
-        android:background="@color/viewfinder_border"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+<!--    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        android:id="@+id/rl_layouttransaksi"-->
+<!--        android:background="@color/viewfinder_border"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
 
 
 
-        android:layout_marginBottom="5dp">
+<!--        android:layout_marginBottom="5dp">-->
 
-        <TextView
-            android:id="@+id/tv_barkod"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Code"
-            android:textSize="16sp"
-            />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_barkod"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:text="Code"-->
+<!--            android:textSize="16sp"-->
+<!--            />-->
 
-        <TextView
-            android:id="@+id/tv_nama"
-            android:layout_toRightOf="@+id/tv_barkod"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="7dp"
-            android:text="Nama"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_nama"-->
+<!--            android:layout_toRightOf="@+id/tv_barkod"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="7dp"-->
+<!--            android:text="Nama"-->
+<!--            android:textSize="16sp" />-->
 
-        <TextView
-            android:id="@+id/tv_jml"
-            android:layout_toLeftOf="@id/tv_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Jumlah"
+<!--        <TextView-->
+<!--            android:id="@+id/tv_jml"-->
+<!--            android:layout_toLeftOf="@id/tv_total"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:text="Jumlah"-->
 
-            android:textSize="16sp" />
+<!--            android:textSize="16sp" />-->
 
-        <TextView
-            android:id="@+id/tv_total"
-            android:layout_alignParentRight="true"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
-            android:text="Total"
-            android:textAlignment="viewEnd"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_total"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_width="120dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginRight="7dp"-->
+<!--            android:text="Total"-->
+<!--            android:textAlignment="viewEnd"-->
+<!--            android:textSize="16sp" />-->
 
-    </RelativeLayout>
+<!--    </RelativeLayout>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_list_request"
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="500dp"
 
@@ -87,6 +86,5 @@
 
         android:text="BAYAR TRANSAKSI"
         android:textSize="24sp" />
-    />
 
 </FrameLayout>
