--- a/app/src/main/res/layout/fragment_home_karyawan.xml
+++ b/app/src/main/res/layout/fragment_home_karyawan.xml
@@ -7,56 +7,54 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rl_layouttransaksi"
-        android:background="@color/viewfinder_border"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+<!--    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        android:id="@+id/rl_layouttransaksi"-->
+<!--        android:background="@color/viewfinder_border"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
 
-        android:layout_marginBottom="5dp">
+<!--        android:layout_marginBottom="5dp">-->
 
-        <TextView
-            android:id="@+id/tv_barkod"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Code"
-            android:textSize="16sp"
-            />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_barkod"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:text="Code"-->
+<!--            android:textSize="16sp"-->
+<!--            />-->
 
-        <TextView
-            android:id="@+id/tv_nama"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Nama"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_nama"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:text="Nama"-->
+<!--            android:textSize="16sp" />-->
 
 
 
-        <TextView
-            android:id="@+id/tv_jml"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Jumlah"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_jml"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:text="Jumlah"-->
+<!--            android:textSize="16sp" />-->
 
-        <TextView
-            android:id="@+id/tv_harga"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Harga"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_harga"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:text="Harga"-->
+<!--            android:textSize="16sp" />-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_list_request"
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:clipToPadding="false" />
 </FrameLayout>
