--- a/app/src/main/res/layout/fragment_tambah_data.xml
+++ b/app/src/main/res/layout/fragment_tambah_data.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/puteh"
     tools:context=".TambahDataFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -16,67 +17,134 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="28sp"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:text="Menambah Stock Baru" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            >
 
-            <EditText
-                android:id="@+id/et_barkod"
-                android:layout_width="270dp"
-                android:layout_height="match_parent"
 
-                android:hint="Scan Barcode" />
 
-            <Button
-                android:id="@+id/btn_barkod"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="SCAN"
-                android:textAllCaps="false" />
 
-        </LinearLayout>
 
-        <EditText
-            android:id="@+id/et_nama"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:hint="Nama Barang" />
-
-        <EditText
-            android:id="@+id/et_jml"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center"
-            android:hint="Jumlah"
-            android:inputType="number" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/outline"
+            android:orientation="vertical"
             >
 
             <TextView
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textSize="24sp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="12sp"
                 android:textAlignment="center"
-                android:text="Rp" />
+                android:text=" Kode Barang" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                >
+
+                <EditText
+                    android:id="@+id/et_barkod"
+                    android:layout_width="290dp"
+                    android:layout_height="match_parent"
+                    android:hint="Kode Barang" />
+
+                <Button
+                    android:id="@+id/btn_barkod"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/button_shape"
+                    android:text="SCAN"
+                    android:textAllCaps="false" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/outline"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/colorPrimary"
+                android:textSize="12sp"
+                android:textAlignment="center"
+                android:text=" Nama Barang" />
+
+
+            <EditText
+                android:id="@+id/et_nama"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nama Barang" />
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/outline"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/colorPrimary"
+                android:textSize="12sp"
+                android:textAlignment="center"
+                android:text=" Jumlah" />
+
+
+            <EditText
+                android:id="@+id/et_jml"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Jumlah"
+                android:inputType="number" />
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/outline"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/colorPrimary"
+                android:textSize="12sp"
+                android:textAlignment="center"
+                android:text=" Harga Awal" />
 
             <EditText
                 android:id="@+id/et_hrgawal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 android:hint="Harga Awal"
                 android:inputType="number" />
 
@@ -87,16 +155,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:background="@drawable/outline"
+            android:orientation="vertical"
             >
 
             <TextView
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textSize="24sp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="12sp"
                 android:textAlignment="center"
-                android:text="Rp" />
+                android:text=" Harga Jual" />
 
             <EditText
                 android:id="@+id/et_hrgjual"
@@ -113,6 +184,7 @@
             android:id="@+id/btn_tambahbarang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_shape"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:text="Tambah Barang"
