--- a/app/src/main/res/layout/meminta_data.xml
+++ b/app/src/main/res/layout/meminta_data.xml
@@ -1,47 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_layout"
-    android:background="@color/viewfinder_border"
+    android:background="@color/puteh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="2dp"
     android:layout_marginTop="2dp"
     android:layout_marginRight="2dp"
-    android:layout_marginBottom="2dp">
+    android:layout_marginBottom="2dp"
 
-    <TextView
-        android:id="@+id/tv_barkod"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:text="Code"
-        android:textSize="16sp"
-        />
+    android:padding="7dp"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_nama"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:text="Nama"
-        android:textSize="16sp" />
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:background="@drawable/outline"-->
+<!--        -->
+<!--        >-->
+
+        <TextView
+            android:id="@+id/tv_nama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/birunom"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="Nama"
+            android:textSize="18sp" />
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_barkod"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="Code"
+                android:textSize="16sp"
+                />
+
+            <TextView
+                android:id="@+id/tv_jml"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="Jumlah"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_harga"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/tv_jml"
+                android:textColor="@color/ijo"
+                android:textStyle="bold"
+                android:text="Harga"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
 
 
 
-    <TextView
-        android:id="@+id/tv_jml"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:text="Jumlah"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/tv_harga"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:text="Harga"
-        android:textSize="16sp" />
 
 </LinearLayout>
