--- a/app/src/main/res/layout/meminta_datatransaksi.xml
+++ b/app/src/main/res/layout/meminta_datatransaksi.xml
@@ -1,27 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_layouttransaksi"
-    android:background="@color/viewfinder_border"
+    android:background="@color/puteh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="2dp"
     android:layout_marginTop="2dp"
     android:layout_marginRight="2dp"
-    android:layout_marginBottom="2dp">
+    android:layout_marginBottom="2dp"
+
+    android:padding="7dp"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+    <TextView
+        android:id="@+id/tv_nama"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/birunom"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:text="Nama"
+        android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/tap_edit"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:background="@color/abang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_popup_edit"
+        />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/ll_tap"
         android:layout_width="match_parent"
-        android:layout_height="27dp"
-
-
+        android:layout_height="wrap_content"
         >
 
         <TextView
             android:id="@+id/tv_barkod"
             android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_width="100dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text="Code"
@@ -29,48 +55,45 @@
             />
 
         <TextView
-            android:id="@+id/tv_nama"
-            android:layout_toRightOf="@+id/tv_barkod"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="7dp"
-            android:text="Nama"
-            android:textSize="16sp" />
-
-        <TextView
             android:id="@+id/tv_jml"
-            android:layout_toLeftOf="@+id/tap_edit"
-            android:layout_centerInParent="true"
-            android:layout_width="30dp"
+            android:layout_toLeftOf="@+id/tv_kali"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text="000"
+            android:text="jumlah"
             android:layout_marginRight="4dp"
             android:textAlignment="viewEnd"
             android:textSize="16sp" />
 
-        <ImageView
-            android:id="@+id/tap_edit"
-            android:layout_toLeftOf="@+id/tv_total"
-            android:layout_centerInParent="true"
-            android:background="@color/puteh"
+        <TextView
+            android:id="@+id/tv_kali"
+            android:layout_toLeftOf="@+id/tv_harga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_popup_edit"
-            />
-
-        <TextView
-            android:id="@+id/tv_total"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
-            android:text="Total"
+            android:text="x"
+            android:layout_marginRight="4dp"
             android:textAlignment="viewEnd"
             android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/tv_harga"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="harga"
+            android:textAlignment="viewEnd"
+            android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/tv_total"
+            android:layout_below="@+id/tv_harga"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/ijo"
+            android:text="Total"
+            android:textAlignment="viewEnd"
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
