--- a/app/src/main/res/layout/meminta_transaksi_karyawan.xml
+++ b/app/src/main/res/layout/meminta_transaksi_karyawan.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_layoutTransaksi"
-    android:background="@color/viewfinder_border"
+    android:id="@+id/rl_layoutTransaksiKaryawan"
+    android:background="@color/puteh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="2dp"
     android:layout_marginTop="2dp"
     android:layout_marginRight="2dp"
-    android:layout_marginBottom="2dp">
+    android:layout_marginBottom="2dp"
+    android:padding="7dp"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/ll_tap"
         android:layout_width="match_parent"
-        android:layout_height="27dp"
-
-
+        android:layout_height="wrap_content"
         >
+        <TextView
+            android:id="@+id/tv_namaTransaksi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/birunom"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="Nama"
+            android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/tap_edit"
@@ -25,30 +34,35 @@
             android:layout_height="20dp"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_popup_edit"
-            android:layout_marginRight="5dp"
-            />
+        />
+    </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/ll_tap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
         <TextView
-            android:id="@+id/tv_namakaryawan"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
+            android:id="@+id/tv_namaKaryawan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="Nama"
+            android:text="Nama Karyawan"
             android:textSize="16sp" />
 
-
         <TextView
-            android:id="@+id/tv_totalkaryawan"
-            android:layout_toRightOf="@+id/tv_namakaryawan"
-            android:layout_toLeftOf="@+id/tap_edit"
+            android:layout_toLeftOf="@+id/tv_totalkaryawan"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginRight="5dp"
+            android:text="Total Transaksi =>  "
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/tv_totalkaryawan"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:text="Total"
             android:textAlignment="viewEnd"
             android:textSize="16sp" />
