--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,16 @@
     <color name="colorAccent">#D81B60</color>
     <color name="warnaNota">#00ffff</color>
     <color name="warnaNota1">#00cc00</color>
+    <color name="ijo">#00cc00</color>
+    <color name="birunom">#66ffff</color>
+
+
     <color name="warnaNota2">#33ccff</color>
     <color name="puteh">#ffffff</color>
     <color name="abang">#ff0000</color>
+    <color name="menuKaryawan">#e67300</color>
+    <color name="menuKasir">#e6e600</color>
+    <color name="kuning">#e6e600</color>
+
+
 </resources>
