--- a/app/src/main/res/layout/fragment_home_karyawan.xml
+++ b/app/src/main/res/layout/fragment_home_karyawan.xml
@@ -56,5 +56,6 @@
         android:id="@+id/rc_list_request"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="5dp"
         android:clipToPadding="false" />
 </FrameLayout>
