--- a/app/src/main/res/layout/fragment_transaksi_karyawan.xml
+++ b/app/src/main/res/layout/fragment_transaksi_karyawan.xml
@@ -45,8 +45,7 @@
                 android:id="@+id/et_NamaTransaksi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"
-                android:hint="Nama Barang"
+                android:hint="Nama Transaksi"
                 android:textAlignment="center"
                 android:text=""/>
 
