--- a/app/src/main/res/layout/fragment_home_boss.xml
+++ b/app/src/main/res/layout/fragment_home_boss.xml
@@ -43,6 +43,6 @@
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:padding="5dp"
         android:clipToPadding="false" />
 </FrameLayout>
