--- a/app/src/main/res/layout/fragment_home_kasir.xml
+++ b/app/src/main/res/layout/fragment_home_kasir.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:padding="5dp"
         android:clipToPadding="false" />
 
 
