--- a/app/src/main/res/layout/meminta_transaksi_karyawan.xml
+++ b/app/src/main/res/layout/meminta_transaksi_karyawan.xml
@@ -8,7 +8,6 @@
     android:layout_marginTop="2dp"
     android:layout_marginRight="2dp"
     android:layout_marginBottom="2dp"
-    android:padding="7dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -51,14 +50,14 @@
             android:textSize="16sp" />
 
         <TextView
-            android:layout_toLeftOf="@+id/tv_totalkaryawan"
+            android:layout_toLeftOf="@+id/tv_totalKaryawan"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total Transaksi =>  "
             android:textSize="16sp" />
         <TextView
-            android:id="@+id/tv_totalkaryawan"
+            android:id="@+id/tv_totalKaryawan"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
