--- a/app/src/main/res/layout/fragment_detail_bayar.xml
+++ b/app/src/main/res/layout/fragment_detail_bayar.xml
@@ -6,85 +6,73 @@
     tools:context=".kasir.DetailBayarFragment">
 
     <!-- TODO: Update blank fragment layout -->
-<!--    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--        android:id="@+id/rl_layouttransaksi"-->
-<!--        android:background="@color/viewfinder_border"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-
-
-
-<!--        android:layout_marginBottom="5dp">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_barkod"-->
-<!--            android:layout_width="100dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="4dp"-->
-<!--            android:text="Code"-->
-<!--            android:textSize="16sp"-->
-<!--            />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_nama"-->
-<!--            android:layout_toRightOf="@+id/tv_barkod"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="7dp"-->
-<!--            android:text="Nama"-->
-<!--            android:textSize="16sp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_jml"-->
-<!--            android:layout_toLeftOf="@id/tv_total"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="4dp"-->
-<!--            android:text="Jumlah"-->
-
-<!--            android:textSize="16sp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_total"-->
-<!--            android:layout_alignParentRight="true"-->
-<!--            android:layout_width="120dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginRight="7dp"-->
-<!--            android:text="Total"-->
-<!--            android:textAlignment="viewEnd"-->
-<!--            android:textSize="16sp" />-->
-
-<!--    </RelativeLayout>-->
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rc_list_request"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
+        android:padding="5dp"
+        android:orientation="vertical">
 
-        android:clipToPadding="false" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
-    <TextView
-        android:id="@+id/tv_totalBayar"
-        android:layout_gravity="bottom"
-        android:textAlignment="center"
-        android:layout_marginBottom="120dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Total Bayar ?"
-        android:textSize="34sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:text="Detail : " />
+            <TextView
+                android:id="@+id/text_NamaDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:text="Detail " />
 
-    <Button
-        android:id="@+id/btn_bayar"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        </LinearLayout>
 
-        android:text="BAYAR TRANSAKSI"
-        android:textSize="24sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rc_list_request"
+                android:layout_above="@+id/tv_totalBayar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:clipToPadding="false" />
+
+            <TextView
+                android:id="@+id/tv_totalBayar"
+                android:layout_above="@+id/btn_bayar"
+                android:textAlignment="center"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Total Bayar ?"
+                android:textSize="34sp" />
+
+            <Button
+                android:id="@+id/btn_bayar"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:text="BAYAR TRANSAKSI"
+                android:textSize="24sp" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </FrameLayout>
