--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,15 +20,11 @@
             android:id="@+id/nav_transaksi"
             android:icon="@drawable/ic_menu_transaksi"
             android:title="Transaksi Penjualan" />
-        <item
-            android:id="@+id/nav_lihatTransaksi"
-            android:icon="@drawable/ic_menu_transaksi"
-            android:title="Lihat Transaksi" />
 
 
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Tools">
         <menu>
             <item
                 android:id="@+id/nav_editBarang"
