--- a/app/src/main/res/layout/meminta_data.xml
+++ b/app/src/main/res/layout/meminta_data.xml
@@ -11,13 +11,9 @@
 
     android:orientation="vertical">
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:background="@drawable/outline"-->
-<!--        -->
-<!--        >-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_nama"
@@ -30,6 +26,18 @@
             android:text="Nama"
             android:textSize="18sp" />
 
+        <ImageView
+            android:id="@+id/tap_edit"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:background="@color/abang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_popup_edit"
+            />
+
+
+    </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
