--- a/app/src/main/res/layout/fragment_transaksi_karyawan.xml
+++ b/app/src/main/res/layout/fragment_transaksi_karyawan.xml
@@ -89,147 +89,20 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/outline"
-        android:orientation="vertical"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
-            android:textAlignment="center"
-            android:text=" Nama Barang" />
+            android:layout_marginTop="10dp">
 
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rc_list_request"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            >
-
-            <EditText
-                android:id="@+id/et_nama"
-                android:layout_width="270dp"
-                android:layout_height="wrap_content"
-                android:enabled="false"
-                android:hint="Nama Barang"
-                android:text=""/>
-
-            <Button
-                android:id="@+id/btn_cari"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/button_shape"
-                android:text="CARI"
-                android:textAllCaps="false" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/outline"
-        android:orientation="vertical"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
-            android:textAlignment="center"
-            android:text=" Jumlah Barang" />
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:clipToPadding="false" />
 
-        <EditText
-            android:id="@+id/et_jml"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:hint="Jumlah"
-            android:text=""
-            android:inputType="number" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/outline"
-        android:orientation="vertical"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
-            android:textAlignment="center"
-            android:text=" Sub Total" />
-        <TextView
-            android:id="@+id/tv_total"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/abang"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:text="0" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/outline"
-        android:orientation="vertical"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
-            android:textAlignment="center"
-            android:text=" Total Transaksi" />
-        <TextView
-            android:id="@+id/tv_totaltransaksi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/abang"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:text="0"
-            />
-
-    </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_totaltransaksi1"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:text="0"
-            />
-
-        <Button
-            android:id="@+id/btn_tambahbarang"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_shape"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:text="Tambah Transaksi"
-            android:textAllCaps="false" />
-
+        </RelativeLayout>
 
     </LinearLayout>
 
