--- a/app/src/main/res/menu/activity_kasir_drawer.xml
+++ b/app/src/main/res/menu/activity_kasir_drawer.xml
@@ -9,17 +9,9 @@
             android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_laporan"
             android:icon="@drawable/ic_menu_transaksi"
             android:title="Laporan" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
-        <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
     </group>
 
     <item android:title="Communicate">
