--- a/app/src/main/res/layout/content_boss.xml
+++ b/app/src/main/res/layout/content_boss.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/app_bar_boss">
 
     <FrameLayout
-        android:id="@+id/frameboss"
+        android:id="@+id/frame"
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
