--- a/app/src/main/res/menu/activity_kasir_drawer.xml
+++ b/app/src/main/res/menu/activity_kasir_drawer.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_laporan"
             android:icon="@drawable/ic_menu_transaksi"
             android:title="Laporan" />
+        <item
+            android:id="@+id/nav_histori"
+            android:icon="@drawable/ic_menu_transaksi"
+            android:title="Histori Transaksi" />
     </group>
 
     <item android:title="Communicate">
