--- a/app/src/main/res/layout/content_kasir.xml
+++ b/app/src/main/res/layout/content_kasir.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/app_bar_kasir">
 
     <FrameLayout
-        android:id="@+id/framekasir"
+        android:id="@+id/frame"
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
