--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
 
 
     <FrameLayout
-        android:id="@+id/frameawal"
+        android:id="@+id/frame"
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
