--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,6 +24,10 @@
             android:id="@+id/nav_editBarang"
             android:icon="@drawable/ic_menu_manage"
             android:title="Edit Barang" />
+        <item
+            android:id="@+id/nav_histori"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Histori Transaksi" />
 
     </group>
 
